# nometa

./: .gitignore  LICENSE  README.md  index.html  objects.inv  pkg.html  py-modindex.html  pyproject.toml  searchindex.js
docs/: genindex.html  guide.html  properties.html  search.html  sheet.html
docs/_sources/: index.rst.txt  sheet.rst.txt
docs/source/: conf.py  guide.rst  pkg.rst  properties.rst
src/nometa/: __init__.py  __main__.py  sheet.py
src/nometa/properties/: __init__.py  boolean.py  datetime.py  numeric.py  text.py
tests/: test_app_properties.py  test_app_sheet.py  test_bool_function.py  test_core_properties.py  test_core_sheet.py  test_document.py  test_extended_core_sheet.py
tests/resource/: test.docx  test.pptx  test.vsdx  test.xlsx
